# zt_log

./: CMakeLists.txt  zt_log.asciidoc
examples/: CMakeLists.txt  log_syslog.c
src/: CMakeLists.txt  zt_log.c  zt_log.h
src/zt_log/: log_file.c  log_file.h  log_private.c  log_private.h  log_stderr.c  log_stderr.h
